Fix user dropdown so that it has some space betweeen its right edge and the viewport right edge.
It seems a recent bootstrap version has added a negative margin-right to the last child of a navbar-right element. In this app this means the user dropdown in the navbar is too far to the right, which is not desirable. Hence this fix.

--- a/app/assets/stylesheets/partials/_bootstrap_fixes.css.scss
+++ b/app/assets/stylesheets/partials/_bootstrap_fixes.css.scss
@@ -6,6 +6,10 @@ that fix them are released, the fixes here will be removed */
   margin-right: 0px;
 }
 
+.navbar-nav.navbar-right:last-child {
+  margin-right: 0;
+}
+
 .well hr {
   border-top: 1px solid #BFBFBF
 }
